[package]
name = "termtpl"
version = "0.1.2"
authors = ["Casey Chance <caseyjchance@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing
description = "A simple template engine for rendering to the terminal"
license = "MIT"

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"

[build-dependencies]
lalrpop = "0.18.1"
